--- a/ec2.yml
+++ b/ec2.yml
@@ -4,6 +4,8 @@ regions:
   - ap-southeast-1
 # filters:
 #   instance-state-code: 16
+filters:
+   tag:Name: Elasticsearch_private_slave
 
 groups:
   ubuntu: "'elasticsearch' in tags.tool"
