--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,11 @@
 [defaults]
-# some basic default values...
-inventory               =       /var/lib/jenkins/workspace/elasticsearch/ec2.yml
-private_key_file        =       /var/lib/jenkins/workspace/new_assignment/Elasticsearch_private_key.pem
-remote_user             =       ubuntu
-host_key_checking       =       False
-[inventory]
-enable_plugins          =       aws_ec2 	
+#role_path=haproxy_role
+retry_files_enabled=no
+inventory=/var/lib/jenkins/workspace/Elastic/aws_ec2.yml
+host_key_checking=False
+remote_user=ubuntu
+private_key_file=/var/lib/jenkins/workspace/Elastic/Elasticsearch_private_key.pem
+#private_key_file=/home/ubuntu/ha_key.pem
 
+[inventory]
+enable_plugin=aws_ec2
