--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,11 @@
 [defaults]
 #role_path=haproxy_role
 retry_files_enabled=no
-inventory=/var/lib/jenkins/workspace/Elastic/ec2.yml
+inventory=aws_ec2.yml
 host_key_checking=False
 remote_user=ubuntu
 private_key_file=/var/lib/jenkins/workspace/Elastic/Elasticsearch_private_key.pem
 #private_key_file=/home/ubuntu/ha_key.pem
 
-[inventory]
+
 enable_plugin=aws_ec2
