--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
 
       stage('Terraform plan') {
          when {
-             expression { params.ACTION == 'plan' || params.ACTION == 'apply'  }
+             expression { params.ACTION == 'plan' }
          }
          steps {
              sh(
