--- a/.github/workflows/code_review_notify.yml
+++ b/.github/workflows/code_review_notify.yml
@@ -1,8 +1,7 @@
-name: Pull Request Notification
+name: Code Review Notification
 on:
   pull_request:
-    types: [opened, reopened, closed, edited, ready_for_review]
-
+    types: [opened, reopened, closed, edited, review_requested]
 jobs:
   send_email:
     runs-on: ubuntu-latest
@@ -14,12 +13,11 @@ jobs:
           server_port: 587
           username: bhavinmpanchal91@gmail.com
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "Pull Request Notification"
-          to: bhavinmpanchal19@gmail.com
-          from: "bhavinmpanchal91@gmail.com"
+          subject: "Code Review Notification"
+          to: bhavinmpanchal19@gmail.com  
+          from: "bhavinmpanchal91@gmail.com"  
           body: |
-            A pull request has been submitted/updated/closed in the repository.
+            A pull request has been made to the repository.
             Repository: ${{ github.repository }}
             Pull Request: ${{ github.event.pull_request.html_url }}
             Author: ${{ github.event.pull_request.user.login }}
-            Action: ${{ github.event.action }}
